--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -20,7 +20,7 @@ sitemap_image:
     defaults: { _controller: 'App\Controller\SitemapController::imageAction', _format: 'xml' }
 
 web:
-    resource: '../../src/Controller/'
+    resource: '../src/Controller/'
     type: 'annotation'
     prefix: '/{_locale}'
     requirements:
