--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,15 @@
 /.web-server-pid
 ###< symfony/web-server-bundle ###
 
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+
 /public/images/banners/*
 !/public/images/banners/.gitkeep
 /public/images/coasters
 /.idea/
-/node_modules
 .php_cs.cache
