--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "symfony/translation": "^4.2",
         "symfony/twig-bundle": "^4.2",
         "symfony/validator": "^4.2",
+        "symfony/webpack-encore-bundle": "^1.6",
         "twig/extensions": "^1.5"
     },
     "require-dev": {
