--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-json": "*",
         "api-platform/core": "^2.1",
         "beberlei/doctrineextensions": "^1.1",
+        "doctrine/doctrine-migrations-bundle": "^2.1",
         "easycorp/easyadmin-bundle": "^1.17",
         "friendsofsymfony/jsrouting-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "~2.0",
