do not ignore public/build for now

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,8 @@
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
-/public/build/
+# Commit build files for now
+#/public/build/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
