--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=0541dda51b5d787ccdbaa1bdcec0d602
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root@127.0.0.1:3306/bdd
+DATABASE_URL=mysql://root:root123@db/captain
 ###< doctrine/doctrine-bundle ###
 
 ###> google/recaptcha ###
