--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "ext-json": "*",
         "api-platform/core": "^2.1",
         "beberlei/doctrineextensions": "^1.1",
+        "doctrine/doctrine-bundle": "^1.12",
         "doctrine/doctrine-migrations-bundle": "^2.1",
+        "doctrine/orm": "^2.7",
         "easycorp/easyadmin-bundle": "^1.17",
         "friendsofsymfony/jsrouting-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "~2.0",
@@ -28,7 +30,6 @@
         "symfony/flex": "^1.1",
         "symfony/form": "^4.2",
         "symfony/monolog-bundle": "^3.3",
-        "symfony/orm-pack": "^1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/security-bundle": "^4.2",
         "symfony/swiftmailer-bundle": "^3.2",
@@ -41,7 +42,8 @@
     "require-dev": {
         "phpunit/phpunit": "^7.0",
         "symfony/maker-bundle": "^1.11",
-        "symfony/profiler-pack": "^1.0",
+        "symfony/stopwatch": "^5.4",
+        "symfony/web-profiler-bundle": "^5.0",
         "symfony/web-server-bundle": "^4.4"
     },
     "config": {
