--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,12 @@ services:
     container_name: php-captain
     volumes:
       - .:/var/www
+      - /home/florian/projects/images:/var/www/images/coasters
   db:
-    image: mariadb:10.5
+    image: mariadb:10.1
     container_name: db-captain
+    volumes:
+      - datamaria:/var/lib/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root123
@@ -26,11 +29,13 @@ services:
     container_name: adminer-captain
     restart: always
     ports:
-        - 8081:8080
+      - 8081:8080
   encore:
     image: node:16-alpine
     container_name: node-captain
     volumes:
-        - .:/var/www
+      - .:/var/www
     working_dir: /var/www
-    command: ["sh", "-c", "npm install && npm run build"]
+    command: [ "sh", "-c", "npm install && npm run build" ]
+volumes:
+  datamaria:
