--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -11,6 +11,8 @@ RUN install-php-extensions apcu gd imagick opcache redis zip intl pdo_mysql
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
+COPY ./conf.d/docker-php-memory.ini /usr/local/etc/php/conf.d/
+
 WORKDIR /var/www
 
 EXPOSE 9000
