update easy admin to version 3

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -25,3 +25,7 @@ web:
     prefix: '/{_locale}'
     requirements:
         _locale: '%app_locales%'
+
+admin:
+    path: /team
+    controller: App\Controller\Admin\DashboardController::index
