update recaptcha to invisible

--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         "doctrine/doctrine-migrations-bundle": "^2.1",
         "doctrine/orm": "^2.7",
         "easycorp/easyadmin-bundle": "^3.0",
+        "excelwebzone/recaptcha-bundle": "^1.5",
         "friendsofsymfony/jsrouting-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "~2.0",
-        "google/recaptcha": "^1.2",
         "hwi/oauth-bundle": "^0.6.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.6",
