--- a/.env
+++ b/.env
@@ -26,14 +26,6 @@ APP_SECRET=0541dda51b5d787ccdbaa1bdcec0d602
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root123@db/captain
 ###< doctrine/doctrine-bundle ###
-
-###> google/recaptcha ###
-# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
-# https://www.google.com/recaptcha/admin
-GOOGLE_RECAPTCHA_SITE_KEY=
-GOOGLE_RECAPTCHA_SECRET=
-###< google/recaptcha ###
-
 ###> hwi/oauth-bundle ###
 FB_ID=
 FB_SECRET=
@@ -58,3 +50,8 @@ APP_JPEGOPTIM_PATH=/usr/bin/jpegoptim
 
 APP_DISCORD_LOG=
 APP_DISCORD_NOTIFY=
+
+###> excelwebzone/recaptcha-bundle ###
+EWZ_RECAPTCHA_SITE_KEY=
+EWZ_RECAPTCHA_SECRET=
+###< excelwebzone/recaptcha-bundle ###
