update recaptcha to v3

--- a/config/packages/ewz_recaptcha.yaml
+++ b/config/packages/ewz_recaptcha.yaml
@@ -1,7 +1,8 @@
 # See https://github.com/excelwebzone/EWZRecaptchaBundle for full configuration
 ewz_recaptcha:
-    version: 2
+    version: 3
+    hide_badge: true
+    score_threshold: 0.6
     api_host: recaptcha.net
-    locale_from_request: true
     public_key:  '%env(EWZ_RECAPTCHA_SITE_KEY)%'
     private_key: '%env(EWZ_RECAPTCHA_SECRET)%'
