--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
         "symfony/expression-language": "^4.2",
         "symfony/flex": "^1.1",
         "symfony/form": "^4.2",
+        "symfony/mailer": "^5.4",
         "symfony/monolog-bundle": "^3.3",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/security-bundle": "^4.2",
         "symfony/stopwatch": "^5.4",
-        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "^4.2",
         "symfony/twig-bundle": "^4.2",
         "symfony/validator": "^4.2",
