--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,6 +1,11 @@
 api_platform:
     title: 'Captain Coaster API'
     description: 'API Keys can be found in your profile page. API keys to be used as an X-AUTH-TOKEN header in your request. Contact us to get support.'
-    version: '0.0.3'
+    version: '0.0.4'
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
+    defaults:
+        cache_headers:
+            etag: true
+            max_age: 3600
+            shared_max_age: 3600
