--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "sensio/framework-extra-bundle": "^5.2",
         "stof/doctrine-extensions-bundle": "^1.2",
         "symfony/asset": "^4.2",
+        "symfony/cache": "^4.4",
         "symfony/dotenv": "^4.2",
         "symfony/expression-language": "^4.2",
         "symfony/flex": "^1.1",
