refact image upload system to use S3

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": "^7.4.20",
         "ext-json": "*",
         "api-platform/core": "^2.1",
+        "aws/aws-sdk-php": "^3.263",
         "beberlei/doctrineextensions": "^1.1",
         "doctrine/doctrine-bundle": "^1.12",
         "doctrine/doctrine-migrations-bundle": "^2.1",
@@ -18,7 +19,9 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.6",
         "knplabs/knp-time-bundle": "^1.7",
+        "league/flysystem-aws-s3-v3": "^2.5",
         "liip/imagine-bundle": "^2.0",
+        "oneup/flysystem-bundle": "^4",
         "php-http/guzzle6-adapter": "^1.1",
         "php-http/httplug-bundle": "^1.10",
         "ramsey/uuid": "^3.7",
