--- a/.env
+++ b/.env
@@ -51,3 +51,9 @@ EWZ_RECAPTCHA_SECRET=
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+AWS_S3_ACCESS_ID=
+AWS_S3_ACCESS_SECRET=
+AWS_S3_BUCKET_NAME=
+AWS_CF_DISTRIBUTION_ID=
+PICTURES_CDN=
