--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,12 +13,9 @@ parameters:
     app_mail_from: 'contact@captaincoaster.com'
     app_contact_mail_to: '%app_mail_from%'
     app_mail_from_name: 'Captain Coaster'
-    app_base_path_images: '%env(APP_BASE_PATH_IMAGES)%'
-    app_watermark_path: '%kernel.project_dir%/public/images/watermark-cc.png'
     app_banner_font_path: '%kernel.project_dir%/public/upload'
     app_banner_target_path: '%kernel.project_dir%/public/images/banners'
     app_banner_background_path: '%kernel.project_dir%/public/images/background-banner.png'
-    liip_imagine.jpegoptim.binary: '%env(APP_JPEGOPTIM_PATH)%'
     router.request_context.host: '%env(APP_CONTEXT_HOST)%'
     router.request_context.scheme: '%env(APP_CONTEXT_SCHEME)%'
 
@@ -44,11 +41,7 @@ services:
     # please note that last definitions always *replace* previous ones
     App\Service\ImageManager:
         arguments:
-            $basePath: '%app_base_path_images%'
-            $watermarkPath: '%app_watermark_path%'
-            $jpegoptimPath: '%env(APP_JPEGOPTIM_PATH)%'
-            $imagine: '@liip_imagine.imagick'
-            $cacheManager: '@liip_imagine.cache.manager'
+            $distributionId: '%env(AWS_CF_DISTRIBUTION_ID)%'
 
     App\Service\BannerMaker:
         arguments:
@@ -103,3 +96,21 @@ services:
 
     Gedmo\Sluggable\SluggableListener:
         alias: stof_doctrine_extensions.listener.sluggable
+
+    Aws\S3\S3Client:
+        arguments:
+            -
+                version: '2006-03-01'
+                region: 'eu-west-3'
+                credentials:
+                    key: '%env(AWS_S3_ACCESS_ID)%'
+                    secret: '%env(AWS_S3_ACCESS_SECRET)%'
+
+    Aws\CloudFront\CloudFrontClient:
+        arguments:
+            -
+                version: 'latest'
+                region: 'eu-west-3'
+                credentials:
+                    key: '%env(AWS_S3_ACCESS_ID)%'
+                    secret: '%env(AWS_S3_ACCESS_SECRET)%'
