--- a/config/packages/oneup_flysystem.yaml
+++ b/config/packages/oneup_flysystem.yaml
@@ -1,11 +1,11 @@
 oneup_flysystem:
   adapters:
-    pictures_upload_adapter:
+    pictures_original_adapter:
       awss3v3:
         client: Aws\S3\S3Client
         bucket: '%env(AWS_S3_BUCKET_NAME)%'
 
   filesystems:
-        default_filesystem:
-            adapter: pictures_upload_adapter
-            alias: League\Flysystem\Filesystem
+        pictures:
+          adapter: pictures_original_adapter
+          alias: League\Flysystem\Filesystem
