--- a/composer.json
+++ b/composer.json
@@ -3,57 +3,60 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.4.20",
+        "php": "^8.0",
         "ext-json": "*",
         "api-platform/core": "^2.1",
         "aws/aws-sdk-php": "^3.263",
         "beberlei/doctrineextensions": "^1.1",
-        "doctrine/doctrine-bundle": "^1.12",
-        "doctrine/doctrine-migrations-bundle": "^2.1",
-        "doctrine/orm": "^2.7",
-        "easycorp/easyadmin-bundle": "^3.0",
+        "doctrine/doctrine-bundle": "^2.0",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.9",
+        "easycorp/easyadmin-bundle": "^4.0",
         "excelwebzone/recaptcha-bundle": "^1.5",
-        "friendsofsymfony/jsrouting-bundle": "^2.1",
-        "friendsofsymfony/user-bundle": "~2.0",
-        "hwi/oauth-bundle": "^0.6.2",
+        "friendsofsymfony/jsrouting-bundle": "^3.0",
+        "friendsofsymfony/user-bundle": "^3.1",
+        "http-interop/http-factory-guzzle": "*",
+        "hwi/oauth-bundle": "2.0.0-BETA2",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-paginator-bundle": "^5",
         "knplabs/knp-time-bundle": "^1.7",
         "league/flysystem-aws-s3-v3": "^2.5",
         "liip/imagine-bundle": "^2.0",
         "oneup/flysystem-bundle": "^4",
-        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/guzzle6-adapter": "^2.0.2",
         "php-http/httplug-bundle": "^1.10",
         "ramsey/uuid": "^3.7",
-        "sensio/framework-extra-bundle": "^5.2",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "symfony/asset": "^4.2",
-        "symfony/cache": "^4.4",
-        "symfony/dotenv": "^4.2",
-        "symfony/expression-language": "^4.2",
-        "symfony/flex": "^1.1",
-        "symfony/form": "^4.2",
-        "symfony/mailer": "^5.4",
-        "symfony/monolog-bundle": "^3.3",
+        "symfony/asset": "^6",
+        "symfony/cache": "^6",
+        "symfony/dotenv": "^6",
+        "symfony/expression-language": "^6",
+        "symfony/flex": "^2.0",
+        "symfony/form": "^6",
+        "symfony/mailer": "^6",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/security-bundle": "^4.2",
-        "symfony/stopwatch": "^5.4",
-        "symfony/translation": "^4.2",
-        "symfony/twig-bundle": "^4.2",
-        "symfony/validator": "^4.2",
-        "symfony/webpack-encore-bundle": "^1.6",
+        "symfony/security-bundle": "^6",
+        "symfony/stopwatch": "^6",
+        "symfony/translation": "^6",
+        "symfony/twig-bundle": "^6",
+        "symfony/validator": "^6",
+        "symfony/webpack-encore-bundle": "^1.0",
         "twig/extensions": "^1.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
-        "symfony/maker-bundle": "^1.11",
-        "symfony/web-profiler-bundle": "^5.0"
+        "phpunit/phpunit": "^10.0",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/web-profiler-bundle": "^6"
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
             "symfony/flex": true,
             "php-http/discovery": true
+        },
+        "platform": {
+            "php": "8.2.5"
         }
     },
     "autoload": {
@@ -69,7 +72,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -80,5 +84,11 @@
     },
     "conflict": {
         "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "^6.0"
+        }
     }
 }
