--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,30 +1,25 @@
+# see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
     secret: '%env(APP_SECRET)%'
-    #default_locale: en
     #csrf_protection: true
-    #http_method_override: true
+    http_method_override: false
+    handle_all_throwables: true
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
-        handler_id: ~
+        handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
+        storage_factory_id: session.storage.factory.native
 
     #esi: true
     #fragments: true
     php_errors:
-        log: 8191 # php -r "echo E_ALL & ~E_USER_DEPRECATED & ~E_DEPRECATED;"
+        log: true
 
-    translator: { fallbacks: ['%locale%'] }
-    form: ~
-    csrf_protection: ~
-    validation: { enable_annotations: true }
-    serializer: { enable_annotations: true }
-    default_locale: '%locale%'
-    trusted_hosts: ~
-    fragments: ~
-    http_method_override: true
-    assets:
-        json_manifest_path: '%kernel.project_dir%/public/build/manifest.json'
-    ide: 'phpstorm'
+when@test:
+    framework:
+        test: true
+        session:
+            storage_factory_id: session.storage.factory.mock_file
