--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: nginx:1-alpine
     container_name: nginx-captain
     ports:
-      - 8080:80
+      - "8080:80"
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - .:/var/www
@@ -15,7 +15,10 @@ services:
     container_name: php-captain
     volumes:
       - .:/var/www
-      - /home/florian/projects/images:/var/www/images/coasters
+    user: "1000:1000"
+    tmpfs:
+      - /tmp
+      - /.composer
   db:
     image: mariadb:10.11
     container_name: db-captain
@@ -29,7 +32,7 @@ services:
     container_name: adminer-captain
     restart: always
     ports:
-      - 8081:8080
+      - "8081:8080"
   encore:
     image: node:16-alpine
     container_name: node-captain
