add login link authentication

--- a/.env
+++ b/.env
@@ -32,9 +32,6 @@ DATABASE_URL=mysql://root:root123@db/captain
 OAUTH_GOOGLE_CLIENT_ID=
 OAUTH_GOOGLE_CLIENT_SECRET=
 
-
-APP_DELIVERY_ADDRESSES=null@null.com
-
 APP_CONTEXT_HOST=localhost
 APP_CONTEXT_SCHEME=http
 
@@ -50,7 +47,10 @@ EWZ_RECAPTCHA_SECRET=
 ###< excelwebzone/recaptcha-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=null://null
+MAILER_SENDER='null@null.com'
+MAILER_REPLY_TO=null@null.com
+MAILER_DEV_RECIPIENT=null@null.com
 ###< symfony/mailer ###
 
 AWS_S3_ACCESS_ID=
