--- a/composer.json
+++ b/composer.json
@@ -34,16 +34,19 @@
         "symfony/flex": "^2.0",
         "symfony/form": "^6.0",
         "symfony/http-client": "^6.0",
-        "symfony/mailer": "^6.0",
+        "symfony/mailer": "6.2.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/notifier": "6.2.*",
         "symfony/runtime": "^6.0",
         "symfony/security-bundle": "^6.0",
         "symfony/stopwatch": "^6.0",
         "symfony/translation": "^6.0",
-        "symfony/twig-bundle": "^6.0",
+        "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "^6.0",
         "symfony/webpack-encore-bundle": "^1.0",
-        "twig/extra-bundle": "^3.6",
+        "twig/cssinliner-extra": "*",
+        "twig/extra-bundle": "*",
+        "twig/inky-extra": "*",
         "twig/intl-extra": "^3.6"
     },
     "require-dev": {
