--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,7 +6,7 @@ RUN apk add --no-cache git
 # Install PHP extensions
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/local/bin/
 
-RUN install-php-extensions apcu gd imagick opcache redis zip intl pdo_mysql
+RUN install-php-extensions apcu gd imagick opcache redis zip intl pdo_mysql xsl
 
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
