--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,11 +4,14 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        users_in_memory: { memory: null }
         api_user_provider:
             entity:
                 class: 'App\Entity\User'
                 property: 'apiKey'
+        login_link_provider:
+            entity:
+                class: 'App\Entity\User'
+                property: 'email'
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -22,10 +25,24 @@ security:
 
         main:
             lazy: true
+            login_link:
+                check_route: login_check
+                #check_post_only: true
+                signature_properties: ['id', 'email']
+                provider: login_link_provider
+                lifetime: 300
+                max_uses: 1
+                login_path: login
             custom_authenticators:
                 - App\Security\GoogleAuthenticator
             logout:
                 path: logout
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 2629800 # 1 month in seconds
+                always_remember_me: true
+                secure: true
+                httponly: true
 
 #        api_secured:
 #            guard:
@@ -35,28 +52,6 @@ security:
 #            stateless: true
 #            pattern: '^/api/'
 
-#        main:
-#            # used for remember_me
-#            provider: oauth_provider
-##            anonymous: ~
-#            oauth:
-#                resource_owners:
-#                    facebook: '/login/check-facebook'
-#                    google: '/login/check-google'
-#                # A améliorer
-#                login_path: '/en/login'
-#                use_forward: false
-#                failure_path: '/en/login'
-#                oauth_user_provider:
-#                    service: 'my.custom.user_provider'
-#            remember_me:
-#                secret: '%env(APP_SECRET)%'
-#                lifetime: 15552000 # 6 months
-#                path: '/'
-#                always_remember_me: true
-#            logout:
-#                path: '/logout'
-#                target: '/'
     role_hierarchy:
         ROLE_ADMIN:       [ROLE_USER, ROLE_CONTRIBUTOR, ROLE_PREVIEW_FEATURE]
         ROLE_SUPER_ADMIN: ROLE_ADMIN
