remove DiscordService for symfony notifier

--- a/.env
+++ b/.env
@@ -58,3 +58,8 @@ AWS_S3_ACCESS_SECRET=
 AWS_S3_BUCKET_NAME=
 AWS_S3_CACHE_BUCKET_NAME=
 PICTURES_CDN=
+
+###> symfony/discord-notifier ###
+DISCORD_NOTIF_DSN=
+DISCORD_LOG_DSN=
+###< symfony/discord-notifier ###
