--- a/composer.json
+++ b/composer.json
@@ -27,22 +27,23 @@
         "liip/imagine-bundle": "^2.0",
         "oneup/flysystem-bundle": "^4",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "symfony/asset": "^6.0",
-        "symfony/cache": "^6.0",
-        "symfony/dotenv": "^6.0",
-        "symfony/expression-language": "^6.0",
+        "symfony/asset": "6.2.*",
+        "symfony/cache": "6.2.*",
+        "symfony/discord-notifier": "6.2.*",
+        "symfony/dotenv": "6.2.*",
+        "symfony/expression-language": "6.2.*",
         "symfony/flex": "^2.0",
-        "symfony/form": "^6.0",
-        "symfony/http-client": "^6.0",
+        "symfony/form": "6.2.*",
+        "symfony/http-client": "6.2.*",
         "symfony/mailer": "6.2.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "6.2.*",
-        "symfony/runtime": "^6.0",
-        "symfony/security-bundle": "^6.0",
-        "symfony/stopwatch": "^6.0",
-        "symfony/translation": "^6.0",
+        "symfony/runtime": "6.2.*",
+        "symfony/security-bundle": "6.2.*",
+        "symfony/stopwatch": "6.2.*",
+        "symfony/translation": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
-        "symfony/validator": "^6.0",
+        "symfony/validator": "6.2.*",
         "symfony/webpack-encore-bundle": "^1.0",
         "twig/cssinliner-extra": "*",
         "twig/extra-bundle": "*",
@@ -56,10 +57,10 @@
         "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^10.0",
         "rector/rector": "^0.16.0",
-        "symfony/debug-bundle": "^6.0",
+        "symfony/debug-bundle": "6.2.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.2",
-        "symfony/web-profiler-bundle": "^6.0"
+        "symfony/web-profiler-bundle": "6.2.*"
     },
     "config": {
         "allow-plugins": {
