--- a/config/packages/notifier.yaml
+++ b/config/packages/notifier.yaml
@@ -1,8 +1,8 @@
 framework:
     notifier:
-        #chatter_transports:
-        #    slack: '%env(SLACK_DSN)%'
-        #    telegram: '%env(TELEGRAM_DSN)%'
+        chatter_transports:
+            discord_notif: '%env(DISCORD_NOTIF_DSN)%'
+            discord_log: '%env(DISCORD_LOG_DSN)%'
         #texter_transports:
         #    twilio: '%env(TWILIO_DSN)%'
         #    nexmo: '%env(NEXMO_DSN)%'
