--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ DATABASE_URL=mysql://root:root123@db/captain
 OAUTH_GOOGLE_CLIENT_ID=
 OAUTH_GOOGLE_CLIENT_SECRET=
 
-APP_CONTEXT_HOST=localhost
+APP_CONTEXT_HOST=localhost:8080
 APP_CONTEXT_SCHEME=http
 
 APP_BASE_PATH_IMAGES=/var/www/images/coasters
