--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
         "doctrine/doctrine-bundle": "^2.0",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.9",
-        "easycorp/easyadmin-bundle": "^4.0",
+        "easycorp/easyadmin-bundle": "^4",
         "excelwebzone/recaptcha-bundle": "^1.5",
         "friendsofsymfony/jsrouting-bundle": "^3.0",
         "http-interop/http-factory-guzzle": "*",
-        "knplabs/knp-paginator-bundle": "^5.0",
-        "knplabs/knp-time-bundle": "^1.7",
+        "knplabs/knp-paginator-bundle": "^6",
+        "knplabs/knp-time-bundle": "^2",
         "knpuniversity/oauth2-client-bundle": "^2.15",
-        "league/flysystem-aws-s3-v3": "^2.5",
-        "league/oauth2-facebook": "^2.2",
-        "league/oauth2-google": "^4.0",
+        "league/flysystem-aws-s3-v3": "^3",
+        "league/oauth2-facebook": "^2",
+        "league/oauth2-google": "^4",
         "liip/imagine-bundle": "^2.0",
         "oneup/flysystem-bundle": "^4",
         "stof/doctrine-extensions-bundle": "^1.2",
@@ -56,9 +56,11 @@
         "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^10.0",
         "rector/rector": "^0.16.0",
+        "symfony/browser-kit": "6.3.*",
+        "symfony/css-selector": "6.3.*",
         "symfony/debug-bundle": "6.3.*",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^6.3",
+        "symfony/phpunit-bridge": "6.3.*",
         "symfony/web-profiler-bundle": "6.3.*"
     },
     "config": {
