--- a/config/packages/notifier.yaml
+++ b/config/packages/notifier.yaml
@@ -1,11 +1,10 @@
 framework:
     notifier:
         chatter_transports:
+            discord: '%env(DISCORD_DSN)%'
             discord_notif: '%env(DISCORD_NOTIF_DSN)%'
             discord_log: '%env(DISCORD_LOG_DSN)%'
-        #texter_transports:
-        #    twilio: '%env(TWILIO_DSN)%'
-        #    nexmo: '%env(NEXMO_DSN)%'
+        texter_transports:
         channel_policy:
             # use chat/slack, chat/telegram, sms/twilio or sms/nexmo
             urgent: ['email']
