repaired facebook authentication and other fixes

--- a/.env
+++ b/.env
@@ -31,6 +31,8 @@ DATABASE_URL=mysql://root:root123@db/captain
 
 OAUTH_GOOGLE_CLIENT_ID=
 OAUTH_GOOGLE_CLIENT_SECRET=
+OAUTH_FACEBOOK_CLIENT_ID=
+OAUTH_FACEBOOK_CLIENT_SECRET=
 
 APP_CONTEXT_HOST=localhost:8080
 APP_CONTEXT_SCHEME=http
@@ -50,8 +52,9 @@ EWZ_RECAPTCHA_SECRET=
 MAILER_DSN=null://null
 MAILER_SENDER='null@null.com'
 MAILER_REPLY_TO=null@null.com
-MAILER_DEV_RECIPIENT=null@null.com
 ###< symfony/mailer ###
+
+APP_DELIVERY_ADDRESSES=null@null.com
 
 AWS_S3_ACCESS_ID=
 AWS_S3_ACCESS_SECRET=
