--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": "^8.2",
         "ext-json": "*",
         "api-platform/core": "^3.0",
         "aws/aws-sdk-php": "^3.263",
@@ -71,7 +71,7 @@
             "php-http/discovery": true
         },
         "platform": {
-            "php": "8.2.5"
+            "php": "8.3.0"
         },
         "preferred-install": {
             "*": "dist"
