multiple fixes, including review and rating

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     volumes:
       - datamaria:/var/lib/mysql
     restart: always
+    ports:
+        - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root123
   adminer:
